--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,8 @@ pinterest-share: False
 pocket-share: False
 vkontakte-share: False
 
-disqus-shortname: "personal-jekyll-theme"
+#disqus-shortname: "personal-jekyll-theme"
+#disqus-shortname: "wj1224"
 
 syntax-highlight: True
 
