--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ force-https: True
 
 lang: "en"
 author: "John Smith"
-title: "WonJong Jo"
+title: "WJ's Blog"
 #description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
 #keywords: "smith, jones, personal, jekyll, theme"
 favicon: "/img/favicon.ico"
